fixed cropping

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p {
 }
 
 .headshot {
-    border-radius: 400px;
+    border-radius: 50%;
     height: auto;
     max-width: 350px;
     max-height: 350px;
